# arenaline

./: .gitignore  Cargo.toml  README.md  match.tplog  match_path.txt
deploy/: arenaline.json
docs/: DEMO-VIDEO.md  SUBMISSION.md  TECHNICAL.md  TXLINE-FEEDBACK.md
games/duel/: Cargo.toml
games/duel/src/: lib.rs
programs/duel-program/: Cargo.toml
programs/duel-program/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
scripts/: onchain-verify.mjs
web/: index.html  trace.json
