[workspace]
resolver = "2"
members = [
    "games/duel",
    "programs/duel-program",
    "runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pruvnetwork/arenaline"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
